--- a/index.html
+++ b/index.html
@@ -25,8 +25,9 @@
         }
     </script>
     <h2>Sellersprite Monthly PPC Costs</h2>
-    <label for="keywords">Keywords:</label>
+    <label for="keywords">Keywords:</label><br>
     <input type="text" id="keywords">
+    <div style="height:15px"></div>
     <button type="button" id="start-sellersprite">Start</button>
     <div style="height: 10px"></div>
     <p id="status-message-visibility-sellersprite" style="display:none"><span id="status-message-sellersprite"></span>
