--- a/index.html
+++ b/index.html
@@ -24,9 +24,10 @@
             document.getElementById("status-message-visibility-asinsight").style.display = "none";
         }
     </script>
+    <div style="height:15px"></div>
     <h2>Sellersprite Monthly PPC Costs</h2>
     <label for="keywords">Keywords:</label><br>
-    <input type="text" id="keywords">
+    <textarea id="keywords" rows="10" cols="40"></textarea>
     <div style="height:15px"></div>
     <button type="button" id="start-sellersprite">Start</button>
     <div style="height: 10px"></div>
