--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <style>
-        #gotit {
+        .gotit {
             color: blue;
             cursor: pointer;
         }
@@ -18,7 +18,7 @@
     <button type="button" id="start-asinsight">Start</button>
     <div style="height: 10px"></div>
     <p id="status-message-visibility-asinsight" style="display:none"><span id="status-message-asinsight"></span>
-        <span onclick="gotItClicked()">&nbsp;Got it.</span></p>
+        <span onclick="gotItClicked()" class="gotit">&nbsp;Got it.</span></p>
     <script>
         function gotItClickedAsinsight() {
             document.getElementById("status-message-visibility-asinsight").style.display = "none";
@@ -32,7 +32,7 @@
     <button type="button" id="start-sellersprite">Start</button>
     <div style="height: 10px"></div>
     <p id="status-message-visibility-sellersprite" style="display:none"><span id="status-message-sellersprite"></span>
-        <span onclick="gotItClickedSellersprite()">&nbsp;Got it.</span></p>
+        <span onclick="gotItClickedSellersprite()" class="gotit">&nbsp;Got it.</span></p>
     <script>
         function gotItClickedSellersprite() {
             document.getElementById("status-message-visibility-sellersprite").style.display = "none";
