--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <button type="button" id="start-asinsight">Start</button>
     <div style="height: 10px"></div>
     <p id="status-message-visibility-asinsight" style="display:none"><span id="status-message-asinsight"></span>
-        <span onclick="gotItClicked()" class="gotit">&nbsp;Got it.</span></p>
+        <span onclick="gotItClickedAsinsight()" class="gotit">&nbsp;Got it.</span></p>
     <script>
         function gotItClickedAsinsight() {
             document.getElementById("status-message-visibility-asinsight").style.display = "none";
